[gd_scene load_steps=12 format=3 uid="uid://cdv566f17j4jx"]

[ext_resource type="Script" uid="uid://dne6s68vqa6ry" path="res://src/menus/MainMenu.gd" id="1_wrr04"]
[ext_resource type="Texture2D" uid="uid://c0g0e72eyct52" path="res://assets/ui/base_logo_no_bg_sheet.png" id="2_1jwlh"]
[ext_resource type="Theme" uid="uid://crneit8sf87tj" path="res://src/ui/DotHopTheme.tres" id="3_wh0ly"]
[ext_resource type="Script" uid="uid://cpuyvmqrhur0o" path="res://src/ui/AnimatedVBoxContainer.gd" id="4_e383p"]
[ext_resource type="Theme" uid="uid://beg0yvicrirg0" path="res://src/ui/GreenButtonTheme.tres" id="4_mlk80"]
[ext_resource type="Theme" uid="uid://tmcplph82m7i" path="res://src/ui/GreenWoodPanelTheme.tres" id="4_yjkk1"]
[ext_resource type="Theme" uid="uid://cul4fuxbykddp" path="res://src/ui/BlueButtonTheme.tres" id="5_dgc14"]
[ext_resource type="Theme" uid="uid://d36tu8qosbiom" path="res://src/ui/RedButtonTheme.tres" id="5_o8jy0"]
[ext_resource type="Script" uid="uid://bctpf7w7bb4xq" path="res://src/ui/FadeIn.gd" id="8_14kqq"]
[ext_resource type="Theme" uid="uid://o436126qschu" path="res://src/ui/PaperLabelTheme.tres" id="8_nrx06"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a04u7"]
bg_color = Color(0.94902, 0.811765, 0.615686, 1)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_wrr04")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a04u7")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
texture = ExtResource("2_1jwlh")
stretch_mode = 4

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer7" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_yjkk1")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(200, 256)
layout_mode = 2
script = ExtResource("4_e383p")

[node name="StartButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_mlk80")
text = "Start"

[node name="OptionsButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_mlk80")
text = "Options"

[node name="PuzzleBrowserButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_mlk80")
text = "Puzzle Browser"

[node name="CreditsButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_dgc14")
text = "Credits"

[node name="QuitButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_o8jy0")
text = "Quit"

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MarginContainer8" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PuzzleStatsLabel" type="RichTextLabel" parent="PanelContainer/HBoxContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
theme = ExtResource("8_nrx06")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center][color=forest_green]0[/color] / [color=dark_slate_blue]0[/color] puzzles complete
[color=forest_green]0[/color] / [color=dark_slate_blue]0[/color] dots hopped"
fit_content = true
scroll_active = false

[node name="MarginContainer9" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer6" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="VersionLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("3_wh0ly")
theme_type_variation = &"MenuMetadata"
bbcode_enabled = true
text = "v1.1.2"
fit_content = true
scroll_active = false

[node name="ChangelogButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_mlk80")
text = "Changelog"

[node name="PlaytesterButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_mlk80")
text = "Playtester Page"

[node name="MarginContainer7" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="DangerRussGamesButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 157.0
offset_top = 542.0
offset_right = 423.0
offset_bottom = 606.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_mlk80")
text = "DangerRussGames.com"

[node name="FadeIn" type="Node" parent="." node_paths=PackedStringArray("nodes")]
script = ExtResource("8_14kqq")
nodes = [NodePath("../PanelContainer/HBoxContainer/CenterContainer/TextureRect"), NodePath("../PanelContainer/HBoxContainer/VBoxContainer/CenterContainer/PuzzleStatsLabel")]
dur = 0.8
